Fixed tooltip truncation bug

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -551,7 +551,7 @@ li.crumb {
         box-shadow: var(--inner-focus-ring);
       }
 
-      span:not(.context-label) {
+      & > span:not(.context-label) {
         display: block;
         white-space: nowrap;
         overflow: hidden;
